# StitchPeek

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_installer.bat  install_dev.bat  installer.iss  test_thumbnail.bat  uninstall_dev.bat
.github/workflows/: release.yml
src/: Registry.cpp  Registry.h  StitchPeek.cpp  StitchPeek.def  StitchPeek.h  StitchRenderer.cpp  StitchRenderer.h  dllmain.cpp
test/: sample.dst  sample.exp  sample.jef  sample.pec  sample.pes  sample.vp3  sample.xxx
tools/: analyze_pec.cpp  check_spikes.cpp  debug_pes.cpp  test_thumbnail.cpp
